# flake8-no-chain-assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/flake8_no_chained_assignments/: plugin.py
tests/: test_plugin.py
