[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-no-chained-assignments"
version = "0.1.0"
description = "Flake8 plugin to prohibit chained assignments (e.g., a = b = c)"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Author", email = "author@example.com" }]
classifiers = [
  "Framework :: Flake8",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["flake8", "pytest"]

[project.urls]
Homepage = "https://github.com/mrsndmn/flake8-no-model-forward-call"
Repository = "https://github.com/mrsndmn/flake8-no-model-forward-call"

[project.entry-points."flake8.extension"]
NCA001 = "flake8_no_chained_assignments.plugin:NoChainedAssignmentsChecker"

[tool.flake8]
max-line-length = 128

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["flake8_no_chained_assignments"]

